manifests/deployment.yaml
# write kubernetes manifest file for deployment and service  
# Path: sample-python-app-lmt\k8s\deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app-lmt
  labels:
    app: sample-python-app-lmt
spec:

    replicas: 1
    selector:
        matchLabels:
          app: sample-python-app-lmt
    template:
        metadata:
          labels:
              app: sample-python-app-lmt
        spec:
          containers:
            - name: sample-python-app-lmt
              image: ghcr.io/cybage-devops/sample-python-app-lmt:latest
              imagePullPolicy: Always
              ports:
                - containerPort: 5000
              volumeMounts:
                - name: log-volume
                  mountPath: /var/log
              resources:
                requests:
                  memory: "128Mi"
                  cpu: "100m"
                limits:
                  memory: "256Mi"
                  cpu: "200m"    
          imagePullSecrets:
            - name: dockerconfigjson-github-com
          volumes:
            - name: log-volume
              emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: sample-python-app-lmt
spec:

    selector:
        app: sample-python-app-lmt
    ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
    type: LoadBalancer
