manifests/ingress.yml
# write ingress for sample-python-app-lmt 
# ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-python-app-lmt
  # annotations:
    # kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-python-app.lmt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-python-app-lmt
            port:
              number: 5000
